@@ -44,6 +44,13 @@ class TableHandler(TableHandlerInterface):
                 not TableHandler.table_exist(cursor, new_name):
             cursor.execute('ALTER TABLE "%s" RENAME TO "%s"' % \
                     (old_name, new_name))
+        #Rename history table
+        old_history = old_name + "__history"
+        new_history = new_name + "__history"
+        if TableHandler.table_exist(cursor, old_history) and \
+                not TableHandler.table_exist(cursor, new_history):
+            cursor.execute('ALTER TABLE "%s" RENAME TO "%s"' % \
+                    (old_history, new_history))
 
     @staticmethod
     def sequence_exist(cursor, sequence_name):
