@@ -1,3 +1,4 @@
+* Handle sequence and history renaming when renaming table
 * Add old_password to set_preferences of res.user on password change
 * Allow to drop constraint, index and foreign key with custom table name
 * Added column_rename on TableHandler
